# bee_kv

./: .gitignore  console.py  pyproject.toml  requirements.txt
bee_kv/application/driven/: ports.py
bee_kv/application/driver/: implementations.py
bee_kv/application/model/: entities.py  use_cases.py
bee_kv/infrastructure/: factory.py  repository.py
bee_kv/public/driver/: __init__.py  entities.py  facade.py  factory.py  ports.py
test/application/model/kw_data/: test_entities.py  test_use_cases.py
test/integration/: test_integration.py
