[project]
name = "bee_kv"
version = "1.0.0"
description = "An exagonal architecture exercise"
authors = [
    {name = "Luca Stretti", email = "laxertu@gmail.com"}
]
dependencies = [
  "bee_core @ git+https://github.com/laxertu/bee_core",
]


[build-system]
requires = ["setuptools", "pytest", "wheel"]
