[project]
name = "bee_kv"
dynamic = ["version"]
description = "An exagonal architecture exercise"
authors = [
    {name = "Luca Stretti", email = "laxertu@gmail.com"}
]
dependencies = [
  "bee_core @ git+https://github.com/laxertu/bee_core",
]

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools-git-versioning]
enabled = true
version_file = "VERSION"
template = "{tag}"
